<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTripStartedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/started_at_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTripName" />

    <TextView
        android:id="@+id/textViewTripCompletedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/completed_at_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTripStartedAt" />

    <TextView
        android:id="@+id/textViewTripStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date_label"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTripStartedAt"
        app:layout_constraintStart_toEndOf="@+id/textViewTripStartedAt"
        app:layout_constraintTop_toTopOf="@+id/textViewTripStartedAt" />

    <TextView
        android:id="@+id/textViewTripCompletedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/na_label"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTripCompletedAt"
        app:layout_constraintStart_toEndOf="@+id/textViewTripCompletedAt"
        app:layout_constraintTop_toTopOf="@+id/textViewTripCompletedAt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewTripStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/on_going_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTripCompletedAt" />

    <TextView
        android:id="@+id/textViewTripDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/distance_label"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTripStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTripStatus" />
</androidx.constraintlayout.widget.ConstraintLayout>